--- a/client/bower.json
+++ b/client/bower.json
@@ -15,7 +15,9 @@
     "Bootflat": "^2.0.4",
     "angular-md5": "^0.1.10",
     "SVG-Loaders": "svg-loaders#^1.0.2",
-    "bootstrap": "3.3.7"
+    "bootstrap": "3.3.7",
+    "moment": "^2.29.0",
+    "remarkable-bootstrap-notify": "^3.1.3"
   },
   "appPath": "app",
   "moduleName": "csAdministratorApp",
